--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/add_item"
-        android:title="Add"/>
+        android:title="Third Activity"/>
     <item
         android:id="@+id/remove_item"
-        android:title="Remove"/>
+        android:title="Test put data"/>
 </menu>
