返回数据给上一个activity

--- a/app/src/main/res/layout/first_layout.xml
+++ b/app/src/main/res/layout/first_layout.xml
@@ -12,4 +12,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/btn20"
         android:text="bnt20"/>
+
+    <Button
+        android:id="@+id/btn335"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="3.3.5test" />
 </LinearLayout>
