--- a/app/src/main/res/layout/second_layout.xml
+++ b/app/src/main/res/layout/second_layout.xml
@@ -8,6 +8,7 @@
 
     <Button
         android:id="@+id/btn2"
+        android:text="3.3.5test2"
         android:layout_width="321dp"
         android:layout_height="47dp"
         android:layout_marginTop="264dp"
