--- a/app/src/main/res/layout/third_layout.xml
+++ b/app/src/main/res/layout/third_layout.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="208dp"
-        android:text="Button"
+        android:text="exit"
         app:layout_constraintStart_toStartOf="@+id/btn3"
         app:layout_constraintTop_toBottomOf="@+id/btn3" />
 </androidx.constraintlayout.widget.ConstraintLayout>
